# space-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: build_and_deploy.yaml  build_and_deploy_test.yaml
docs/: Makefile  conf.py  index.rst
docs/source/api/: index.rst
examples/: config.py  esa_esn_experiment.py  esa_esn_gb_experiment.py  esa_esn_rr_experiment.py  esa_experiment.py  esa_lstm_experiment.py  nasa_esn_experiment.py  nasa_esn_gb_experiment.py  nasa_esn_rr_experiment.py  nasa_experiment.py  nasa_lstm_experiment.py  notebook_nasa.ipynb
spaceai/: __init__.py
spaceai/benchmark/: __init__.py  benchmark.py  esa.py  nasa.py
spaceai/benchmark/callbacks/: __init__.py  callback.py  handler.py  system.py
spaceai/benchmarks/: __init__.py  benchmark.py  esaad.py  nasa.py
spaceai/benchmarks/nasa_bechmark/: README.md  config.yaml  environment.yml  run_exps.py
spaceai/benchmarks/nasa_bechmark/result_stage1/ESN/: ESN_2024-05-18_18.44.16.csv
spaceai/benchmarks/nasa_bechmark/result_stage1/LSTM/: LSTM_2024-05-11_20.01.12.csv
spaceai/benchmarks/nasa_bechmark/telemanom/: __init__.py  channel.py  config.py  detector.py  errors.py  helpers.py  modeling.py  trainer.py
spaceai/benchmarks/nasa_bechmark/torch_esn/model/: initializers.py  reservoir.py
spaceai/benchmarks/nasa_bechmark/torch_esn/optimization/: ridge_regression.py
spaceai/data/: __init__.py  anomaly_dataset.py  esa.py  nasa.py  utils.py
spaceai/examples/: nasa_run_exps.py
spaceai/models/: __init__.py
spaceai/models/anomaly/: __init__.py  detector.py  error_based_detector.py  telemanom.py
spaceai/models/predictors/: __init__.py  esn.py  lstm.py  seq_model.py
spaceai/spaice-autocl-main/: README.md  config.yaml  config2.yaml  environment.yml  requirements.txt  run_exps.py
spaceai/spaice-autocl-main/telemanom/: __init__.py  channel.py  detector.py  errors.py  helpers.py  hpo.py  modeling.py
spaceai/spaice-autocl-main/torch_esn/model/: initializers.py  reservoir.py
spaceai/spaice-autocl-main/torch_esn/optimization/: ridge_regression.py
spaceai/utils/: __init__.py  callbacks.py  data.py  tools.py
